<resources>
    <string name="app_name">RotaenoUploader</string>
    <string name="app_version">1.8.0 beta 1 (17)</string>
    <string name="upload_google_play">上传Google Play版数据</string>
    <string name="upload_taptap_global">上传TapTap全球版数据</string>
    <string name="upload_taptap_china">上传TapTap国区版数据</string>
    <string name="objectid_textview">objectId (点击复制) :</string>
    <string name="log_title">Log:</string>
    <string name="about_developer">哔哩哔哩：大块牛奶糖233</string>
    <string name="upload_manually_select">手动选择目录上传</string>
    <string name="settings">设置</string>
    <string name="settings_title">设置</string>
    <string name="settings_message">根据下载渠道要求，您的游戏数据将上传至指定的服务器处理。\n\n这里暂时没什么可设置的</string>
    <string name="settings_button">完成</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="upload_icon_description">表示上传的图标</string>
    <string name="upload_game_data">上传游戏数据</string>
    <string name="last_update">上次更新于</string>
    <string name="tap_cn">Tap 国服</string>
    <string name="tap_global">Tap 国际</string>
    <string name="google_ver">Google 版</string>
</resources>